--- a/storage/mysql/package.json
+++ b/storage/mysql/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@mayahq/node-red-node-mysql",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "A Node-RED node to read and write to a MySQL database",
     "dependencies": {
-        "mysql2": "^2.3.3"
+        "mysql2": "^2.3.3",
+        "mysqldump": "^3.2.0"
     },
     "repository": {
         "type": "git",
